Fix overflow issue

--- a/src/components/reply-mail/assets/styles.css
+++ b/src/components/reply-mail/assets/styles.css
@@ -1,5 +1,5 @@
 .reply-mail {
-    @apply flex h-full w-full flex-col
+    @apply  flex flex-col flex-1
 }
 
 .reply-mail-section-row {
@@ -10,8 +10,8 @@
     @apply mb-1 flex flex-col shrink   
 }
 
-.reply-mail-editor-container {
-    @apply flex-grow flex-shrink overflow-auto px-2 
+.reply-mail-editor-container { 
+    @apply flex-grow flex-row flex-shrink overflow-auto  px-2  
 }
 
 .reply-mail-section-title {
@@ -24,4 +24,8 @@
 
 .reply-mail-input {
     @apply  w-full  p-3 text-gray-800 text-sm bg-white  placeholder-slate-400  focus:outline-none border-gray-300 focus:border focus:border-gray-500 
+}
+/* This overrides padding from row  */
+.reply-mail-section-row .reply-mail-input {
+    @apply p-0
 }
